--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,83 @@
-<?xml version="1.0" encoding="UTF-8"?><project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.dirent.littlehelper</groupId>
   <artifactId>littlehelper</artifactId>
   <packaging>war</packaging>
   <version>0.0.1</version>
   <description>Little Helper</description>
+  
+  
   <build>
+  
     <finalName>littlehelper</finalName>
+  
     <plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<configuration>
-				<source>1.5</source>
-				<target>1.5</target>
-			</configuration>
-		</plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.4.3</version>
+        <configuration>
+          <encoding>utf-8</encoding>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <encoding>utf-8</encoding>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+      
+      <!-- Run the application using "mvn jetty:run" -->
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.10</version>
+        <configuration>
+          <stopPort>9966</stopPort>
+          <stopKey>tthelper</stopKey>
+          <!-- Log to the console. -->
+          <requestLog implementation="org.mortbay.jetty.NCSARequestLog">
+            <!-- This doesn't do anything for Jetty, but is a workaround for a Maven bug
+                     that prevents the requestLog from being set. -->
+            <append>true</append>
+          </requestLog>
+          <webAppConfig implementation="org.mortbay.jetty.plugin.Jetty6PluginWebAppContext">
+            <contextPath>/littlehelper</contextPath>                        
+            <sessionHandler implementation="org.mortbay.jetty.servlet.SessionHandler">
+              <sessionManager implementation="org.mortbay.jetty.servlet.HashSessionManager">
+                <storeDirectory>${basedir}/target/jetty-sessions</storeDirectory>
+              </sessionManager>
+            </sessionHandler>
+          </webAppConfig>
+        </configuration>
+      </plugin>
+            
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <archiveClasses>true</archiveClasses>
+        </configuration>
+      </plugin>
+      
 	</plugins>
+    
   </build>
+  
+  
   <dependencies>
-	<dependency>
-		<groupId>org.apache.tapestry</groupId>
-		<artifactId>tapestry-framework</artifactId>
-		<version>4.1.1-SNAPSHOT</version>
-		<exclusions>
-			<exclusion>
-			  <groupId>javax.servlet</groupId>
-			  <artifactId>servlet-api</artifactId>
-			</exclusion>
-		</exclusions>
-    </dependency>
     <dependency>
-      <groupId>org.apache.tapestry</groupId>
-      <artifactId>tapestry-contrib</artifactId>
-      <version>4.1.1-SNAPSHOT</version>
+      <groupId>com.ceyoniq.nscale</groupId>
+      <artifactId>desktopweb-tap5core</artifactId>
+      <version>7.1.0100-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.tapestry</groupId>
-      <artifactId>tapestry-annotations</artifactId>
-      <version>4.1.1-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+  </dependencies>		
 </project>
