--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <version>6.1.10</version>
         <configuration>
           <stopPort>9966</stopPort>
-          <stopKey>tthelper</stopKey>
+          <stopKey>littlehelper</stopKey>
           <!-- Log to the console. -->
           <requestLog implementation="org.mortbay.jetty.NCSARequestLog">
             <!-- This doesn't do anything for Jetty, but is a workaround for a Maven bug
@@ -75,9 +75,9 @@
   
   <dependencies>
     <dependency>
-      <groupId>com.ceyoniq.nscale</groupId>
-      <artifactId>desktopweb-tap5core</artifactId>
-      <version>7.1.0100-SNAPSHOT</version>
+      <groupId>org.apache.tapestry</groupId>
+      <artifactId>tapestry-core</artifactId>
+      <version>5.3.0</version>
     </dependency>
   </dependencies>		
 </project>
