--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,11 @@
       <artifactId>tapestry-core</artifactId>
       <version>5.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.4</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>		
 </project>
