--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,12 @@
       <version>2.4</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    	<groupId>joda-time</groupId>
+    	<artifactId>joda-time</artifactId>
+    	<version>2.0</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>		
 </project>
