--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
         <configuration>
           <encoding>utf-8</encoding>
           <source>1.6</source>
@@ -63,6 +64,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
+        <version>2.2</version>
         <configuration>
           <archiveClasses>true</archiveClasses>
         </configuration>
