--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,12 @@
     	<artifactId>joda-time</artifactId>
     	<version>2.0</version>
     	<type>jar</type>
-    	<scope>compile</scope>
     </dependency>
+	<dependency>
+		<groupId>org.tmatesoft.svnkit</groupId>
+		<artifactId>svnkit</artifactId>
+		<version>1.3.3</version>
+		<type>jar</type>
+	</dependency>
   </dependencies>		
 </project>
