--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,10 @@
 		<version>1.3.3</version>
 		<type>jar</type>
 	</dependency>
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.6.3</version>
+	</dependency>
   </dependencies>		
 </project>
