Erkennen einer aktuellen Revision
git-svn-id: http://wikiserver/svn/littlehelper/trunk@807 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,10 @@
 		<artifactId>jsoup</artifactId>
 		<version>1.6.3</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.1</version>
+	</dependency>
   </dependencies>		
 </project>
