--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'war'
 apply plugin: 'jetty'
@@ -8,11 +9,16 @@ configurations {
 }
 
 project.ext.versions = [
-    servletapi: "2.5",
+    servletapi: "2.5"
 ]
 
 repositories {
     mavenCentral()
+	
+	maven {
+		
+		url "file://" + System.getProperty( 'user.home' ) + "/.m2/repository"
+	}
 }
 
 dependencies {
