Lokales Maven-Repository richtig eingebunden
git-svn-id: http://wikiserver/svn/littlehelper/trunk@850 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,7 @@ project.ext.versions = [
 repositories {
     mavenCentral()
 	
-	maven {
-		
-		url "file://" + System.getProperty( 'user.home' ) + "/.m2/repository"
-	}
+	mavenLocal()
 }
 
 dependencies {
