--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,19 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'war'
-apply plugin: 'jetty'
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.gretty:gretty:4.0.1"
+    }
+}
+
+apply plugin: "org.gretty"
 
 configurations {
    	provided
@@ -23,7 +35,7 @@ dependencies {
     provided "javax.servlet:servlet-api:${versions.servletapi}"
 
     compile "org.apache.commons:commons-lang3:3.1"
-    compile "org.apache.tapestry:tapestry-core:5.3.6"
+    compile "org.apache.tapestry:tapestry-core:5.8.1"
     compile "org.tmatesoft.svnkit:svnkit:1.3.3"
     compile "joda-time:joda-time:2.0"
     compile "org.jsoup:jsoup:1.6.3"
